--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <nav>
         <span id="logo_container">
             <img id="logo_img" src="images/company_logo.png" alt="logo">
-        </span>
-        <span id="menu_button_container">
-            <img id="menu_img" src="images/menu-button.png" alt="menu">
-        </span>
+            <span id="menu_button_container">
+                <img id="menu_img" src="images/menu-button.png" alt="menu">
+            </span>
     </nav>
 
     <div id="hero_section">
@@ -35,7 +34,7 @@
 
     <div id="hero_section_icons">
 
-        <div id="icon">
+        <div class="icon">
             <img src="images/discount.png" alt="discount">
             <div>
                 <h4>Discount Voucher</h4>
@@ -43,7 +42,7 @@
             </div>
         </div>
 
-        <div id="icon">
+        <div class="icon">
             <img src="images/fresh.png" alt="fresh">
             <div>
                 <h4>Fresh Healthy Food</h4>
@@ -51,7 +50,7 @@
             </div>
         </div>
 
-        <div id="icon">
+        <div class="icon">
             <img src="images/delivery.png" alt="delivery">
             <div>
                 <h4>Fast Home Delivery</h4>
